# open-events

./: .gitignore  AGENTS.md  README.md  go.mod  go.sum
cmd/openevents/: main.go
docs/plans/: 2026-05-10-openevents-initial.md  2026-05-11-protobuf-buf-pivot.md  2026-05-12-demo-e2e.md
examples/: README.md
examples/demo/: .env.example  .gitattributes  .gitignore  AGENTS.md  GUIDE.md  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yaml  openevents.yaml
examples/demo/services/consumer/: README.md  pyproject.toml
examples/demo/services/consumer/src/consumer/: __init__.py  __main__.py  attrs.py  config.py  dispatch.py  event_names.py  schemas.py  sink.py  sqs.py
examples/demo/services/consumer/src/consumer/context/: device.py  user.py
examples/demo/services/consumer/src/consumer/event_names/: device.py  user.py
examples/demo/services/consumer/src/consumer/schemas/: device.py  user.py
examples/demo/services/consumer/tests/: test_contract_attrs.py  test_contract_event_names.py  test_dispatch.py  test_schemas.py  test_sink.py
internal/cli/: generate.go  generate_test.go  lock.go  lock_test.go  root.go  validate.go  validate_test.go
internal/codegen/: generate.go  go_codegen.go  go_codegen_test.go  python_codegen.go  python_codegen_test.go  util.go  util_test.go
internal/constgen/: constgen.go  constgen_test.go
internal/integration/: validate_demo_test.go
internal/protogen/: render.go  render_test.go
internal/registry/: diagnostic.go  load.go  load_test.go  model.go  model_contract_test.go  validate.go  yaml.go  (+1 more)
scripts/: install-buf.sh
(+134 files in other folders)
