[project]
name = "demo-consumer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0,<2",
    "boto3>=1.34",
    "protobuf>=5.0",
    "openevents-demo-pb2",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "B", "UP"]

[tool.uv.sources]
openevents-demo-pb2 = { path = "../../registry/.openevents/proto/gen/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/consumer"]

[project.scripts]
demo-consumer = "consumer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
